# fashionidea

./: .dockerignore  .gitignore  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 20260710_1934-52ff853972f9_initial_schema.py  20260711_0303-6df3f2ad1b51_moodboards.py  20260711_0425-a13414dc63bd_occasions_categories_tags_measurements_.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  collections.py  designers.py  inquiries.py  lookbooks.py  looks.py  marketplace.py  moodboards.py  search.py  storefront.py  utils.py
backend/app/core/: config.py  db.py  security.py  vocab.py
backend/app/crud/: base.py  collection.py  designer.py  inquiry.py  look.py  lookbook.py  marketplace.py  moodboard.py  tenant.py  user.py
backend/app/models/: __init__.py  base.py  collection.py  enums.py  inquiry.py  look.py  moodboard.py  tenant.py  user.py
backend/app/schemas/: auth.py  catalog.py  common.py  discovery.py  inquiry.py  marketplace.py  moodboard.py  storefront.py
backend/tests/: conftest.py  test_auth.py  test_discovery.py  test_tenant_isolation.py  utils.py
docker/: .env.example  backend-start.sh  backend.Dockerfile  frontend.Dockerfile
docker/traefik/: dynamic.yml  traefik.yml
docs/: api-design.md  architecture.md  testing.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: discovery.spec.ts  (+1 more)
frontend/: .npmrc  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
(+78 files in other folders)
