[project]
name = "fashion-idea-backend"
version = "0.1.0"
description = "Fashion Idea — multi-tenant SaaS backend (FastAPI + SQLModel)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
